# pytrader

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: build.yml  deploy.yml
algos/: __init__.py  bullish_rsi_signal.py
deployment/: example.env  firestore.indexes.json  monitor.sh  pytrader.service  setup.sh
deployment/ansible/playbooks/: site.yml
deployment/ansible/roles/pytrader_app/defaults/: main.yml
deployment/ansible/roles/pytrader_app/handlers/: main.yml
deployment/ansible/roles/pytrader_app/tasks/: main.yml
deployment/ansible/roles/pytrader_app/templates/: pytrader-evaluate.service.j2  pytrader-evaluate.timer.j2  pytrader-monitor.service.j2  pytrader-scrape.service.j2  pytrader-scrape.timer.j2  pytrader.env.j2
model/: __init__.py  signal.py  trade.py
notebooks/: rsi.ipynb
pytrader/: main.py
pytrader/algos/: bullish_rsi_signal.py
pytrader/filters/: __init__.py  dollar_volume_filter.py
pytrader/model/: signal.py  trade.py
pytrader/services/: __init__.py  alpaca.py  database.py  google_chat_notifications.py  rsi_signal_provider.py  tickers.py  yf_data.py
pytrader/utils/: config.py  need_something_better.py
scripts/: example.env  firebase_deploy.sh  process.sh  scrape.sh
services/: __init__.py  alpaca.py  database.py  tickers.py
tests/pytrader/algos/: test_rsi_tests.py
utils/: __init__.py  localtime.py
