[tool.poetry]
name = "pytrader"
version = "1.3.1"
description = "CLI for identifying a creating trades"
authors = ["AJ <11035621+axlj45@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
joblib = "^1.4.2"
pandas = "^2.2.2"
pandas-datareader = "^0.10.0"
scikit-learn = "^1.6.1"
pandas-ta = "^0.3.14b0"
statsmodels = "^0.14.2"
yfinance = "0.2.31"
plotly = "^5.24.1"
matplotlib = "^3.9.0"
click = "^8.1.8"
pytz = "^2024.1"
alpaca-py = "^0.21.2"
python-dotenv = "^1.0.1"
firebase-admin = "^6.5.0"

[tool.poetry.group.dev.dependencies]
notebook = "7.3.2"
pytest = "^7.1.2"
pytest-cov = "^3.0"
pytest-mock = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pytrader = "pytrader.main:cli"
