[tool.poetry]
name = "pytrader"
version = "1.4.2"
description = "CLI for identifying a creating trades"
authors = ["AJ <11035621+axlj45@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.3"
joblib = "^1.4.2"
pandas = "^2.2.2"
pandas-datareader = "^0.10.0"
scikit-learn = "^1.6.1"
pandas-ta = "^0.3.14b0"
statsmodels = "^0.14.2"
yfinance = "0.2.55"
plotly = "^6.0.1"
matplotlib = "^3.10.1"
click = "^8.1.8"
pytz = "^2025.1"
alpaca-py = "^0.39.0"
python-dotenv = "^1.0.1"
firebase-admin = "^6.5.0"
requests-cache = "^1.2.1"
requests-ratelimiter = "^0.7.0"

[tool.poetry.group.dev.dependencies]
notebook = "7.3.3"
pytest = "^8.3.5"
pytest-cov = "^6.0"
pytest-mock = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pytrader = "pytrader.main:cli"
